--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -230,7 +230,7 @@ a:focus {
     background-color: transparent;
     color: var(--color-primary);
     border: 2px solid var(--color-primary);
-    border-radius: 0;
+    border-radius: 24px;
     box-shadow: none;
   }
   
@@ -475,7 +475,7 @@ a:focus {
   }
   
   .scroll-to-top-btn {
-    @apply fixed bottom-6 right-6 z-50 flex items-center justify-center;
+    @apply fixed bottom-6 right-1.5 z-50 flex items-center justify-center;
     width: 54px;
     height: 54px;
     min-width: 54px;
